0.0.2_bugfixed